--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <ul class="list-inline">
       <li>Hexo &copy; 2021</li>
       
-        <li>黑ICP备2021000276号-1</li>
+        <li><a href="https://beian.miit.gov.cn/" target="_blank">黑ICP备2021000276号-1</a></li>
       
       <li>Powered by <a href="http://hexo.io/" target="_blank">Hexo</a></li>
       <li>theme  <a target="_blank" rel="noopener" href="https://github.com/zhwangart/hexo-theme-ocean">Ocean</a></li>
